update entities and layout

--- a/translations/messages.de.yaml
+++ b/translations/messages.de.yaml
@@ -14,3 +14,5 @@ Birth date: Geburtsdatum
 Exam date: Abschlussjahr
 Teacher: Tutorium
 Qualification points: Punktzahl des Kursblocks
+Label: Bezeichnung
+Abbreviation: Kürzel
