update exam calculator

--- a/translations/messages.de.yaml
+++ b/translations/messages.de.yaml
@@ -16,3 +16,6 @@ Teacher: Tutorium
 Qualification points: Punktzahl des Kursblocks
 Label: Bezeichnung
 Abbreviation: Kürzel
+Exam number: Prüfung
+Exam points: Notenpunkte (einfach)
+Subject: Prüfungsfach
